manual: introduction, tutorial

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -1,6 +1,10 @@
 
 
-
+@misc{fftw-manual,
+  Author = {Matteo Frigo and Steven~G. Johnson},
+  Title = {{FFTW} users manual},
+  Url = {http://www.fftw.org/fftw3_doc}
+}
 
 @misc{fftw-prec,
   Author = {Matteo Frigo and Steven~G. Johnson},
@@ -113,7 +117,7 @@
 
 @article{FFTW05,
         Author = {Matteo Frigo and Steven~G. Johnson},
-        Journal = {Proc. {\rm IEEE}},
+        Journal = {Proc. \textrm{IEEE}},
         Optnote = {Special issue on {``Program Generation, Optimization, and Platform Adaptation''}},
         Opznumber = {2},
         Pages = {216 -- 231},
