--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -138,7 +138,7 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
     \vspace*{3cm}
       Download \textbf{\Large P}arallel \textbf{\Large F}ast \textbf{\Large F}ourier \textbf{\Large T}ransform Software Library at \\
       {\large \websoft}\\
-      \todo{use github link}
+      {\large \webpfft}\\
     \end{center}
   \end{titlepage}
 
