--- a/doc/shortcuts.tex
+++ b/doc/shortcuts.tex
@@ -24,10 +24,10 @@
 \newcommand{\eip}[1]{\ensuremath{\mathrm{e}^{+2\pi{\ti} #1}}}
 \renewcommand{\mathbf}[1]{\ensuremath{\boldsymbol{#1}}}
 \newcommand{\ds}{\displaystyle}
-\newcommand{\sinc}{{\rm sinc}}
-\newcommand{\dist}{{\rm dist}}
-\newcommand{\erf}{{\rm erf}}
-\newcommand{\erfc}{{\rm erfc}}
+\newcommand{\sinc}{\textrm{sinc}}
+\newcommand{\dist}{\textrm{dist}}
+\newcommand{\erf}{\textrm{erf}}
+\newcommand{\erfc}{\textrm{erfc}}
 \newcommand{\adj}{{\vdash \hspace*{-1.72mm} \dashv}}
 \DeclareMathOperator{\diag}{diag}
 \DeclareMathOperator{\dd}{d}
@@ -88,6 +88,8 @@
 \newcommand{\mpipurl}{www.tu-chemnitz.de/~mpip}
 \newcommand{\webmpip}{\url{\mpipurl}\xspace}
 \newcommand{\websoft}{\url{\mpipurl/software.php}\xspace}
+\newcommand{\webpfft}{\url{https://github.com/mpip/pfft.git}\xspace}
+\newcommand{\webpnfft}{\url{https://github.com/mpip/pnfft.git}\xspace}
 
 
 \newcommand{\red}[1]{\textcolor{red}{#1}}
